:bookmark: Release 1.0.3 - Remove eot files

--- a/css.local/all.css
+++ b/css.local/all.css
@@ -3,10 +3,9 @@
     font-style: normal;
     font-weight: 300;
     src: local('KoPubWorldDotum'),
-    url('../fonts/KoPubWorld-Dotum-Light.woff2') format('woff2'),
-    url('../fonts/KoPubWorld-Dotum-Light.woff') format('woff'),
-    url('../fonts/KoPubWorld-Dotum-Light.otf') format('opentype'),
-    url('../fonts/KoPubWorld-Dotum-Light.eot') format('embedded-opentype');
+        url('../fonts/KoPubWorld-Dotum-Light.woff2') format('woff2'),
+        url('../fonts/KoPubWorld-Dotum-Light.woff') format('woff'),
+        url('../fonts/KoPubWorld-Dotum-Light.otf') format('opentype');
 }
 
 @font-face {
@@ -14,10 +13,9 @@
     font-style: normal;
     font-weight: 400;
     src: local('KoPubWorldDotum'),
-    url('../fonts/KoPubWorld-Dotum-Medium.woff2') format('woff2'),
-    url('../fonts/KoPubWorld-Dotum-Medium.woff') format('woff'),
-    url('../fonts/KoPubWorld-Dotum-Medium.otf') format('opentype'),
-    url('../fonts/KoPubWorld-Dotum-Medium.eot') format('embedded-opentype');
+        url('../fonts/KoPubWorld-Dotum-Medium.woff2') format('woff2'),
+        url('../fonts/KoPubWorld-Dotum-Medium.woff') format('woff'),
+        url('../fonts/KoPubWorld-Dotum-Medium.otf') format('opentype');
 }
 
 @font-face {
@@ -25,10 +23,9 @@
     font-style: normal;
     font-weight: 700;
     src: local('KoPubWorldDotum'),
-    url('../fonts/KoPubWorld-Dotum-Bold.woff2') format('woff2'),
-    url('../fonts/KoPubWorld-Dotum-Bold.woff') format('woff'),
-    url('../fonts/KoPubWorld-Dotum-Bold.otf') format('opentype'),
-    url('../fonts/KoPubWorld-Dotum-Bold.eot') format('embedded-opentype');
+        url('../fonts/KoPubWorld-Dotum-Bold.woff2') format('woff2'),
+        url('../fonts/KoPubWorld-Dotum-Bold.woff') format('woff'),
+        url('../fonts/KoPubWorld-Dotum-Bold.otf') format('opentype');
 }
 
 @font-face {
@@ -36,10 +33,9 @@
     font-style: normal;
     font-weight: 300;
     src: local('KoPubWorldBatang'),
-    url('../fonts/KoPubWorld-Batang-Light.woff2') format('woff2'),
-    url('../fonts/KoPubWorld-Batang-Light.woff') format('woff'),
-    url('../fonts/KoPubWorld-Batang-Light.otf') format('opentype'),
-    url('../fonts/KoPubWorld-Batang-Light.eot') format('embedded-opentype');
+        url('../fonts/KoPubWorld-Batang-Light.woff2') format('woff2'),
+        url('../fonts/KoPubWorld-Batang-Light.woff') format('woff'),
+        url('../fonts/KoPubWorld-Batang-Light.otf') format('opentype');
 }
 
 @font-face {
@@ -47,10 +43,9 @@
     font-style: normal;
     font-weight: 400;
     src: local('KoPubWorldBatang'),
-    url('../fonts/KoPubWorld-Batang-Medium.woff2') format('woff2'),
-    url('../fonts/KoPubWorld-Batang-Medium.woff') format('woff'),
-    url('../fonts/KoPubWorld-Batang-Medium.otf') format('opentype'),
-    url('../fonts/KoPubWorld-Batang-Medium.eot') format('embedded-opentype');
+        url('../fonts/KoPubWorld-Batang-Medium.woff2') format('woff2'),
+        url('../fonts/KoPubWorld-Batang-Medium.woff') format('woff'),
+        url('../fonts/KoPubWorld-Batang-Medium.otf') format('opentype');
 }
 
 @font-face {
@@ -58,8 +53,7 @@
     font-style: normal;
     font-weight: 700;
     src: local('KoPubWorldBatang'),
-    url('../fonts/KoPubWorld-Batang-Bold.woff2') format('woff2'),
-    url('../fonts/KoPubWorld-Batang-Bold.woff') format('woff'),
-    url('../fonts/KoPubWorld-Batang-Bold.otf') format('opentype'),
-    url('../fonts/KoPubWorld-Batang-Bold.eot') format('embedded-opentype');
+        url('../fonts/KoPubWorld-Batang-Bold.woff2') format('woff2'),
+        url('../fonts/KoPubWorld-Batang-Bold.woff') format('woff'),
+        url('../fonts/KoPubWorld-Batang-Bold.otf') format('opentype');
 }
